@@ -1,3 +1,6 @@
+2005-04-16  Kazuhiko  <kazuhiko@fdiary.net>
+	* rast-register.rb: never set $KCODE.
+
 2005-04-14 zunda <zunda at freeshell.org>
 	* disp_referrer.rb, */disp_referrer.rb: better handle ignore_urls
 
